@@ -1,1 +1,37 @@
-crack killrace pally pdk-api.txt pdk.inf pmaster ptscore sendmess
+*.tds
+pdk.lib
+autoexec.el
+crack
+emacs.dsk
+killrace
+null
+pally
+pdk-api.txt
+pdk.inf
+pdk.inf-1
+pdk.inf-2
+pdk.inf-3
+pdk.inf-4
+pdk.inf-5
+pdk.inf-6
+pmaster
+pmasters
+private
+ptscore
+sendmess
+split
+tktest
+ex1*
+ex10*
+ex11*
+ex2*
+ex3*
+ex4*
+ex5*
+ex6*
+ex7*
+ex8*
+ex9*
+dox
+g
+testing
