@@ -1,3 +1,8 @@
+2005-08-11  Stefan Reuther  <Streu@gmx.de>
+
+	* phostpdk.h: fixed BaseFixMission_Def
+	(PutBeamName,PutTorpName,PutPlanetName): fixed prototypes
+
 2005-05-21  Stefan Reuther  <Streu@gmx.de>
 
 	* phostpdk.h: new prototypes
